--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
-    "python.pythonPath": "/Users/hiroaki/.pyenv/versions/3.4.3/bin/python",
-    "editor.formatOnSave": true
+    "python.pythonPath": "/Users/hiroaki/.pyenv/versions/3.8.2/bin/python3.8",
+    "editor.formatOnSave": true,
+    "python.autoComplete.extraPaths": [
+        "/Users/hiroaki/.pyenv/versions/3.8.2/lib/python3.8/site-packages/"
+    ],
+    "python.jediEnabled": false
 }
